--- a/countdown.sass
+++ b/countdown.sass
@@ -10,6 +10,18 @@ body, html
   justify-content: center
   align-items: center
   
+  .pre-click
+    form
+      input
+        text-align: center
+        font-size: 2.5em
+      
+      .day, .month
+        width: 2em
+      
+      .year
+        width: 4em
+
   .main
     width: 80vw
     display: flex
@@ -17,7 +29,7 @@ body, html
     align-items: center
     
     .main-title
-      margin-bottom: 1em
+      margin-bottom: 0.5em
       font-size: 4em
       
     .timer
